--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "engines": { "node": ">=18" },
 
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
